--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bootstrap Example</title>
+    <title>King Mechanic Services</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -489,7 +489,7 @@
                     <td style="font-weight: bold;">Model</td>
                     <td>2014</td>
                     <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
+                    <td>4.5 Cr</td>
                     <td style="font-weight: bold;">Transmission</td>
                     <td>Manual</td>
                   </tr>
@@ -497,7 +497,7 @@
                     <td>Mileage</td>
                     <td>25.5 kmpl</td>
                     <td>Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td>Seats</td>
                     <td>2</td>
                     <td></td>
@@ -531,7 +531,7 @@
                     <td style="font-weight: bold;">Model</td>
                     <td>2016</td>
                     <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
+                    <td>4.5 Cr</td>
                     <td style="font-weight: bold;">Transmission</td>
                     <td>Manual</td>
                   </tr>
@@ -539,7 +539,7 @@
                     <td style="font-weight: bold;">Mileage</td>
                     <td>25.5 kmpl</td>
                     <td style="font-weight: bold;">Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td style="font-weight: bold;">Seats</td>
                     <td>2</td>
                     <td></td>
@@ -571,16 +571,16 @@
                     <td>Rolls Royce</td>
                     <td style="font-weight: bold;">Model</td>
                     <td>2014</td>
-                    <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
                     <td style="font-weight: bold;">Transmission</td>
                     <td>Automatic</td>
+                    <td></td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td style="font-weight: bold;">Mileage</td>
                     <td>25.5 kmpl</td>
                     <td style="font-weight: bold;">Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td style="font-weight: bold;">Seats</td>
                     <td>6</td>
                     <td></td>
@@ -612,16 +612,16 @@
                     <td>Aston Martin</td>
                     <td style="font-weight: bold;">Model</td>
                     <td>2006</td>
-                    <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
                     <td style="font-weight: bold;">Transmission</td>
-                    <td>Manual</td>
+                    <td>manual</td>
+                    <td></td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td>Mileage</td>
                     <td>25.5 kmpl</td>
                     <td>Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td>Seats</td>
                     <td>2</td>
                     <td></td>
@@ -654,7 +654,7 @@
                     <td style="font-weight: bold;">Model</td>
                     <td>2014</td>
                     <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
+                    <td>4.5 Cr</td>
                     <td style="font-weight: bold;">Transmission</td>
                     <td>Manual</td>
                   </tr>
@@ -662,7 +662,7 @@
                     <td>Mileage</td>
                     <td>25.5 kmpl</td>
                     <td>Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td>Seats</td>
                     <td>2</td>
                     <td></td>
@@ -695,7 +695,7 @@
                     <td style="font-weight: bold;">Model</td>
                     <td>2014</td>
                     <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
+                    <td>4.5 Cr</td>
                     <td style="font-weight: bold;">Transmission</td>
                     <td>Manual</td>
                   </tr>
@@ -703,7 +703,7 @@
                     <td>Mileage</td>
                     <td>25.5 kmpl</td>
                     <td>Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td>Seats</td>
                     <td>2</td>
                     <td></td>
@@ -736,7 +736,7 @@
                     <td style="font-weight: bold;">Model</td>
                     <td>2014</td>
                     <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
+                    <td>4.5 Cr</td>
                     <td style="font-weight: bold;">Transmission</td>
                     <td>Manual</td>
                   </tr>
@@ -744,7 +744,7 @@
                     <td>Mileage</td>
                     <td>25.5 kmpl</td>
                     <td>Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td>Seats</td>
                     <td>2</td>
                     <td></td>
@@ -776,16 +776,16 @@
                     <td>Ferrari</td>
                     <td style="font-weight: bold;">Model</td>
                     <td>2014</td>
-                    <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
                     <td style="font-weight: bold;">Transmission</td>
-                    <td>Manual</td>
+                    <td>Automatic</td>
+                    <td></td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td>Mileage</td>
                     <td>25.5 kmpl</td>
                     <td>Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td>Seats</td>
                     <td>2</td>
                     <td></td>
@@ -817,16 +817,16 @@
                     <td>Ferrari</td>
                     <td style="font-weight: bold;">Model</td>
                     <td>2014</td>
-                    <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
                     <td style="font-weight: bold;">Transmission</td>
                     <td>Manual</td>
+                    <td></td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td>Mileage</td>
                     <td>25.5 kmpl</td>
                     <td>Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td>Seats</td>
                     <td>2</td>
                     <td></td>
@@ -859,7 +859,7 @@
                     <td style="font-weight: bold;">Model</td>
                     <td>2014</td>
                     <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
+                    <td>4.5 Cr</td>
                     <td style="font-weight: bold;">Transmission</td>
                     <td>Manual</td>
                   </tr>
@@ -867,7 +867,7 @@
                     <td>Mileage</td>
                     <td>25.5 kmpl</td>
                     <td>Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td>Seats</td>
                     <td>2</td>
                     <td></td>
@@ -900,7 +900,7 @@
                     <td style="font-weight: bold;">Model</td>
                     <td>2014</td>
                     <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
+                    <td>4.5 Cr</td>
                     <td style="font-weight: bold;">Transmission</td>
                     <td>Manual</td>
                   </tr>
@@ -908,7 +908,7 @@
                     <td>Mileage</td>
                     <td>25.5 kmpl</td>
                     <td>Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td>Seats</td>
                     <td>2</td>
                     <td></td>
@@ -940,16 +940,16 @@
                     <td>Ferrari</td>
                     <td style="font-weight: bold;">Model</td>
                     <td>2014</td>
-                    <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
                     <td style="font-weight: bold;">Transmission</td>
-                    <td>Manual</td>
+                    <td>Automatic</td>
+                    <td></td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td>Mileage</td>
                     <td>25.5 kmpl</td>
                     <td>Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td>Seats</td>
                     <td>2</td>
                     <td></td>
@@ -982,7 +982,7 @@
                     <td style="font-weight: bold;">Model</td>
                     <td>2014</td>
                     <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
+                    <td>4.5 Cr</td>
                     <td style="font-weight: bold;">Transmission</td>
                     <td>Manual</td>
                   </tr>
@@ -990,7 +990,7 @@
                     <td>Mileage</td>
                     <td>25.5 kmpl</td>
                     <td>Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td>Seats</td>
                     <td>2</td>
                     <td></td>
@@ -1022,16 +1022,16 @@
                     <td>Ferrari</td>
                     <td style="font-weight: bold;">Model</td>
                     <td>2014</td>
-                    <td style="font-weight: bold;">Buying Price</td>
-                    <td>45000000</td>
                     <td style="font-weight: bold;">Transmission</td>
                     <td>Manual</td>
+                    <td></td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td>Mileage</td>
                     <td>25.5 kmpl</td>
                     <td>Selling Price</td>
-                    <td>40000000</td>
+                    <td>4 Cr</td>
                     <td>Seats</td>
                     <td>2</td>
                     <td></td>
